# call-summarizer

./: .gitignore  README.md  env_template.txt  playground.ipynb  pyproject.toml  requirements.txt  run.py  test_models.py
call_summarizer/: __main__.py  audio_extraction.py  audio_transcription.py  models.py  progress.py  run.py  summaries.py  types.py
data/transcripts/: example_call.json
